<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/wallpaperprincipal"
    android:orientation="vertical"
    tools:context=".Nivel3Activity">

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="47dp"
        android:text="@string/jugador_nombre"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="85dp"
        android:text="@string/total_score"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_vidas"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="124dp"
        android:text="@string/et_vidas"
        android:textColor="#000"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/iv_vidas"
        android:layout_width="97dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/imag_desc"
        app:srcCompat="@drawable/tresvidas" />

    <ImageView
        android:id="@+id/iv_fact1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="225dp"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/imag_desc"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/iv_fact2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="201dp"
        android:contentDescription="@string/imag_desc"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/iv_operador"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="201dp"
        android:contentDescription="@string/imag_desc"
        app:srcCompat="@drawable/resta" />

    <EditText
        android:id="@+id/et_resultado"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="347dp"
        android:ems="10"
        android:hint="@string/et_respuesta"
        android:importantForAutofill="no"
        android:inputType="number" />

    <Button
        android:id="@+id/bt_comprobar"
        android:layout_width="123dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="190dp"
        android:layout_marginTop="349dp"
        android:background="@drawable/fondoboton"
        android:onClick="Compara"
        android:text="@string/bt_suma"
        android:textColor="#FFF" />
</RelativeLayout>